# KyVideoPlayer

./: CMakeLists.txt  Main.qml  README.md  TODO-list.txt  audiodecoder.cpp  audiodecoder.h  demuxworker.cpp  demuxworker.h  main.cpp  minedecoder.cpp  minedecoder.h  playercontroller.cpp  playercontroller.h  qml.qrc  qtcsettings.cmake  shaders.qrc  videodecoder.cpp  videodecoder.h  videooutputfbo.cpp  videooutputrenderer.cpp  yuv.frag  yuv.vert
.qtcreator/: CMakeLists.txt.user.3edf182  CMakeLists.txt.user.d753c5d
Controller/: playercontroller.cpp  playercontroller.h
Decoder/: audiodecoder.cpp  audiodecoder.h  videodecoder.cpp  videodecoder.h
Demux/: demuxworker.cpp  demuxworker.h
PlaybackContext/: playcontext.cpp  playcontext.h  playstate.cpp  playstate.h  playstateqml.cpp  playstateqml.h
Render/: videooutputfbo.cpp  videooutputfbo.h  videooutputrenderer.cpp  videooutputrenderer.h
Tools/: packetqueue.cpp  packetqueue.h  utils.h
resources/: Main.qml
